@@ -1,6 +1,7 @@
 == 5.5.6
 
 * PID file rescue fix
+* Resetting history file when it appears to be truncated (# of last runs != # of old plugins)
 
 == 5.5.5
 
